--- a/schedule.html
+++ b/schedule.html
@@ -285,6 +285,9 @@ $(document).ready(function () {
       <a href="LAB6.html">Lab 6: metapopulations</a>
     </li>
     <li>
+      <a href="LAB7.html">Lab 7: capture-mark-recapture</a>
+    </li>
+    <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
     </li>
     <li>
@@ -580,7 +583,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left">Week 13</td>
 <td align="left">4/16/2019</td>
-<td align="left">LECTURE 1: Parameter estimation! (draft papers due)</td>
+<td align="left">LECTURE 1: Parameter estimation!</td>
 <td align="left"><a href="amstrup1.pdf">Amstrup et al Chapter 1</a></td>
 <td align="left"></td>
 </tr>
@@ -594,14 +597,14 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/19/2019</td>
-<td align="left">LAB: Peer review / Work on group PVA projects</td>
+<td align="left">LAB: Work on group PVA projects</td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 14</td>
 <td align="left">4/23/2019</td>
-<td align="left">LECTURE 1: Species interactions: competition</td>
+<td align="left">LECTURE 1: Species interactions: competition (final project: complete drafts due)</td>
 <td align="left">Gotelli Chapter 5</td>
 <td align="left"></td>
 </tr>
@@ -615,7 +618,7 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">4/26/2019</td>
-<td align="left">LAB: STUDENT PRESENTATIONS</td>
+<td align="left">LAB: STUDENT PRESENTATIONS AND PEER REVIEW</td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
@@ -643,7 +646,7 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left">Week 16</td>
 <td align="left">5/7/2019</td>
-<td align="left">LECTURE 1: final class review (and any remaining student presentation)</td>
+<td align="left">LECTURE 1: final class review</td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
