--- a/FINAL_PROJECTS.html
+++ b/FINAL_PROJECTS.html
@@ -475,7 +475,7 @@ div.tocify {
 <div id="introduction" class="section level3">
 <h3>Introduction</h3>
 <p>This is where you introduce the topic and describe why it’s important. You can recycle and flesh out the material from your proposal!</p>
-<p>Remember to cite lots of literature here!</p>
+<p>Remember to cite literature here!</p>
 </div>
 <div id="methods" class="section level3">
 <h3>Methods</h3>
@@ -495,12 +495,12 @@ div.tocify {
 <div id="results" class="section level3">
 <h3>Results</h3>
 <p>This is where you describe and present the relevant outputs from your model. Provide figures and tables to summarize your <em>relevant</em> results.</p>
-<p>With PVA it can be difficult to decide what to present and what not to present. Always ask yourself: is it <em>relevant</em> to your main questionS??</p>
+<p>With PVA it can be difficult to decide what to present and what not to present. Always ask yourself: is it <em>relevant</em> to your main questions?</p>
 </div>
 <div id="discussion" class="section level3">
 <h3>Discussion</h3>
 <p>This is where you describe what your results really tell us with respect to your main questions.</p>
-<p>Also, you should:</p>
+<p>Also, in your discussion you should:</p>
 <ul>
 <li>Describe any new questions that came up in the process of building and running your PVA</li>
 <li>Describe any potential flaws with your PVA and how you might improve this in the future</li>
@@ -513,7 +513,7 @@ div.tocify {
 <h2>Fourth project-related assignment: the oral presentation!</h2>
 <p>Your group presentation should be in the style of an oral presentation at a conference.</p>
 <p>Presentations will take place during our final two lab periods.</p>
-<p>You will have 12 minutes to give your presentations, with at least 3 additional minutes for presenations.</p>
+<p>You will have 15 minutes to give your presentations, with at least 3 additional minutes for questions.</p>
 <p>We will hand out a simple peer-review form so you can give feedback to your peers.</p>
 <p>A rubric for the presentations can be found <a href="presentationProject_rubric.docx">here</a></p>
 </div>
@@ -524,9 +524,9 @@ div.tocify {
 <ol style="list-style-type: decimal">
 <li><p>By mid-day on April 24 (Wed), you will receive another group’s draft manuscript via WebCampus (see list below).</p></li>
 <li><p>Before lab on April 26, please throroughly read the manuscript you have been assigned, and make comments, paying particular attention to the <a href="WrittenProject_rubric.docx">grading rubric</a>.</p></li>
-<li><p>During the lab period, you will first get together with the other students that were also assigned to review the same manuscript. You will have 25 minutes to compare notes and prepare a written “peer review” of the manuscript that highlights both the strengths and the weaknesses. Please make your comments as specific and constructive as possible. The goal is to give your classmates feedback that will be useful to them as they prepare their final drafts! <em>Please hand in your peer-review to the group that wrote the draft AND your instuctor/TA</em></p></li>
+<li><p>During the lab period, you will first get together with the other students that were also assigned to review the same manuscript. You will have 30 minutes to compare notes and prepare a written “peer review” of the manuscript that highlights both the strengths and the weaknesses. Please make your comments as specific and constructive as possible. The goal is to give your classmates feedback that will be useful to them as they prepare their final drafts! <em>Please hand in your peer-review to the group that wrote the draft AND your instuctor/TA</em></p></li>
 <li><p>After that, we will break up into new groups. One representative from each peer-review group will meet with the project group that wrote the draft manuscript, to give the feedback in person (and on paper).</p></li>
-<li><p>For the remaining time in lab, you will have a chance to work on your PVA write-ups and presentations!</p></li>
+<li><p>For any remaining time in lab, you will have a chance to work on yourwrite-ups and presentations!</p></li>
 </ol>
 <div id="in-class-peer-review-manuscript-drafts" class="section level3">
 <h3>In-class peer review: manuscript drafts</h3>
@@ -540,7 +540,7 @@ div.tocify {
 <div id="tips-for-a-great-presentation" class="section level3">
 <h3>Tips for a great presentation!</h3>
 <p>Here are some general notes about how to prepare and deliver a great presentation:<br />
-- For all slides: <em>Less words, more pictures</em>! Wordy slides often cause people to stop paying attention! All of you are working with charismatic species (cheatgrass may be questionable on that front!), so you shouldn’t have trouble finding nice pictures that capture people’s attention. As for words, 3-5 bullet points maximum! Complete sentences are NOT needed in a presentation. Use a large, sans-serif font to improve readability.</p>
+- For all slides: <em>Less words, more pictures</em>! Wordy slides often cause people to stop paying attention! All of you are working with charismatic species, so you shouldn’t have trouble finding nice pictures that capture people’s attention. As for words, 3-5 bullet points maximum! Complete sentences are NOT needed in a presentation. Use a large, sans-serif font to improve readability.</p>
 <p>Note: make sure you give proper credit for all pictures (e.g., what website did it come from?)</p>
 <ul>
 <li><p>Excitement is infectious- make sure you convey your excitement about the project. You all worked very hard, and you should be proud of what you were able to do. Now you can share this excitement with your colleagues! Many inexperienced presenters make the mistake of highlighting only what they were not able to accomplish. Try to avoid this pitfall- shortcomings should be limited to a single slide in the discussion section of the presentation.</p></li>
@@ -581,9 +581,9 @@ div.tocify {
 <div id="discussion-1" class="section level4">
 <h4>Discussion</h4>
 <ul>
-<li><p>Just one slide discussing shortcomings of your project and how you would improve your model and design if you had additional time.</p></li>
 <li><p>Summarize your key findings- what did you learn?</p></li>
 <li><p>Management implications- how could wildlife managers act upon your findings??</p></li>
+<li><p>Just one slide discussing shortcomings of your project and how you would improve your model and design if you had additional time.</p></li>
 <li><p>Describe what you or other researchers could do to expand upon your findings- what are the next steps?</p></li>
 </ul>
 </div>
